<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" 
    android:background="#ffffff" >
    <TextView
        android:id="@+id/login_tip"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
		android:padding="5dp"
		android:drawablePadding="10dp"
        android:background="#F7F7F7"
        android:drawableLeft="@drawable/id_login_tip"
        android:text="@string/is_login_notice1"/>
	  <LinearLayout
	     android:layout_below="@id/login_tip"
	     android:id="@+id/login_body"
	     android:layout_width="fill_parent"
	     android:layout_height="wrap_content"
	     android:background="@drawable/black_border"
	     android:orientation="vertical" >
		 <LinearLayout 
	   	    android:layout_width="fill_parent"
	   	    android:layout_height="wrap_content"
	   	    android:layout_marginTop="20dp">
	   	    <TextView 
	   	        android:layout_height="wrap_content"
	   	        android:layout_width="wrap_content"
	   	        android:layout_marginLeft="20dp"
	   	        android:layout_marginRight="10dp"
	   	        android:text="@string/is_username"/>
	   	    <EditText 
	   	        android:id="@+id/login_name"
	   	        android:layout_width="fill_parent"
	   	        android:layout_height="wrap_content"
	   	        android:layout_marginRight="20dp"
	   	        android:background="@drawable/login_border"
	   	        android:padding="5dp"
	   	        android:hint="@string/is_username_hint"/>
	   	</LinearLayout>
	   	<LinearLayout 
	   	    android:layout_width="fill_parent"
	   	    android:layout_height="wrap_content"
	   	    android:layout_marginTop="10dp">
	   	    <TextView 
	   	        android:layout_height="wrap_content"
	   	        android:layout_width="wrap_content"
	   	        android:layout_marginLeft="28dp"
	   	        android:layout_marginRight="11dp"
	   	        android:text="@string/is_regist_password"/>
	   	    <EditText 
	   	        android:id="@+id/login_pwd"
	   	        android:layout_width="fill_parent"
	   	        android:layout_height="wrap_content"
	   	        android:layout_marginRight="20dp"
	   	        android:background="@drawable/login_border"
	   	        android:padding="5dp"
	   	        android:hint="@string/is_userpwd_hint"/>
	   	</LinearLayout>
	   	<CheckBox 
	   	    android:id="@+id/cb_autoLogin"
	   	    android:layout_width="wrap_content"
	   	    android:layout_height="wrap_content"
	   	    android:layout_marginTop="10dp"
	   	    android:paddingLeft="10dp"
	   	    android:layout_gravity="center_horizontal"
	   	    android:text="@string/is_auto_login"/>
	   	 <LinearLayout
	         android:layout_width="fill_parent"
	         android:layout_height="wrap_content"
	         android:layout_marginTop="10dip"
	         android:gravity="center_horizontal" >
	         <Button
	             android:id="@+id/btn_user_login_regist"
	             android:layout_width="wrap_content"
	             android:layout_height="35dp"
	             android:background="@drawable/id_login_registe" />
	
	         <Button
	             android:id="@+id/btn_user_login"
	             android:layout_width="wrap_content"
	             android:layout_height="35dp"
	             android:layout_marginLeft="20dip"
	             android:background="@drawable/id_login_login" />
	      </LinearLayout>
	      <TextView
	          android:layout_width="fill_parent"
	          android:layout_height="wrap_content"
	          android:layout_marginTop="20dip"
	          android:layout_marginLeft="20dp"
	          android:layout_marginBottom="10dp"
	          android:layout_marginRight="15dp"
	          android:text="@string/is_forget_password_notice"/>
	</LinearLayout>
     <ImageView
         android:layout_below="@id/login_body"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:src="@drawable/id_login_tel"
         android:layout_marginTop="20dp"
         android:background="#F9F9F9"
         android:contentDescription="@null"/>
</RelativeLayout>
