<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
     <android.support.v4.view.ViewPager
        android:id="@+id/viewpager"
        android:layout_width="match_parent"
        android:layout_height="150dp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/viewpager"
        android:background="#33000000"
        android:orientation="vertical" >
        <LinearLayout
            android:id="@+id/point_group"
            android:layout_width="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content" >
        </LinearLayout>
    </LinearLayout>
    <TextView 
        android:id="@+id/lottery_title"
        android:layout_width="fill_parent"
        android:padding="5dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/viewpager"
        android:textColor="#ffffff"
        android:background="#F52323"
        android:textSize="17sp"
        android:text="@string/lottery_title"/>
    <RelativeLayout 
        android:id="@+id/ssq_relative"
        android:layout_below="@id/lottery_title"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@drawable/bottom_line"
        android:layout_width="fill_parent">
        <ImageView 
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentRight="true"
            android:contentDescription="@null"
            android:layout_centerVertical="true"
            android:src="@drawable/id_ssq"/>"
        <LinearLayout
            android:id="@+id/ssq_number"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:orientation="vertical">
            <LinearLayout 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView 
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/is_ssq"/>
                <TextView
                    android:id="@+id/ssq_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/ssq_ball"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="20dp"
                ></LinearLayout>
        </LinearLayout>
    </RelativeLayout>
    <RelativeLayout 
        android:id="@+id/d_relative"
        android:layout_below="@id/ssq_relative"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@drawable/bottom_line"
        android:layout_width="fill_parent">
        <ImageView 
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentRight="true"
            android:contentDescription="@null"
            android:layout_centerVertical="true"
            android:src="@drawable/id_3d"/>
        <LinearLayout
            android:id="@+id/d_number"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:orientation="vertical">
            <LinearLayout 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView 
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/d_title"/>
                <TextView
                    android:id="@+id/d_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/d_ball"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="20dp"
                ></LinearLayout>
        </LinearLayout>
    </RelativeLayout>
    <RelativeLayout 
        android:id="@+id/linear_news"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:layout_marginTop="5dp"
        android:background="#F52323"
        android:layout_below="@id/d_relative">
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/type_news"
	        android:textColor="#ffffff"
	        android:textSize="17sp"
            android:layout_centerVertical="true"
            android:padding="5dp"/>
        <ImageView 
            android:id="@+id/iv_lottery_newsmore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@null"
            android:src="@drawable/more"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="5dp"/>
    </RelativeLayout>
    <ListView 
        android:id="@+id/lottery_listview"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@id/linear_news"
        android:divider="#dddddd"
        android:dividerHeight="1dp"
        android:cacheColorHint="#00000000"
        android:listSelector="#00000000"/>
</RelativeLayout>
